--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -42,7 +42,7 @@ block content
                                             .col-xs-12.col-sm-12.col-md-12
                                                 // Your awesome content goes here
                                                 .m-b-30
-                                                    .form-group
+                                                    .form-group(style='display:none')
                                                         label.col-sm-2.control-label 회사코드
                                                         .col-sm-9
                                                             input.form-control(name='usermanage[company_cd]' type='text' required value='#{usermanage.company_cd}' disabled)
