--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -38,7 +38,7 @@ block content
                                                 // Your awesome content goes here
                                                 .m-b-30
                                                     form.form.center-block(name='form' action='/usermanage/new' method='post')
-                                                        .form-group
+                                                        .form-group(style='display:none')
                                                             label.col-sm-2.control-label 회사코드
                                                             .col-sm-9
                                                                 input.form-control(id='company_nm' name='usermanage[company_nm]' type='text' required value='')
