--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -81,9 +81,9 @@ block content
                                                     .form-group
                                                         label.col-sm-2.control-label 회사주소1
                                                         .col-sm-2
-                                                            input.form-control(name='usermanage[dom_post_cd1]', type='text', value='#{usermanage.dom_post_cd1}' disabled)
+                                                            input.form-control(name='usermanage[dom_post_cd1]', type='text', value='#{usermanage.dom_post_cd1}')
                                                         .col-sm-5
-                                                            input.form-control(name='usermanage[dom_addr]', type='text', value='#{usermanage.dom_addr}' disabled)
+                                                            input.form-control(name='usermanage[dom_addr]', type='text', value='#{usermanage.dom_addr}')
                                                         .col-sm-2
                                                             span.btn.btn-sm.btn-primary(id='postcode') 우편번호 찾기
                                                     .form-group
