--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -1,9 +1,13 @@
 extends ../layouts/default
 block head 
     script(type='text/javascript').
-        //객체값을 javascript에 매핑
         var companyObj = !{JSON.stringify(company).replace(/<\//g, '<\\/')};
     script(src='/isu/js/usermanage/index.js')
+
+    // postcode
+    script(src='/isu/js/postcode.js')
+    // http
+    script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
 
 block content
     .content-page
@@ -64,7 +68,6 @@ block content
                                                             label.col-sm-2.control-label 새비밀번호
                                                             .col-sm-9
                                                                 input.form-control(name='usermanage[password]' type='password' required value='')
-                                                        
                                                         .form-group
                                                             label.col-sm-2.control-label 사원명
                                                             .col-sm-9
@@ -91,6 +94,8 @@ block content
                                                                 input.form-control(name='usermanage[dom_post_cd1]', type='text', value='')
                                                             .col-sm-5
                                                                 input.form-control(name='usermanage[dom_addr]', type='text', value='')
+                                                            .col-sm-2
+                                                                span.btn.btn-sm.btn-primary(id='postcode') 우편번호 찾기
                                                         .form-group
                                                             label.col-sm-2.control-label 회사주소2
                                                             .col-sm-9
