--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -3,7 +3,7 @@ block head
     script(type='text/javascript').
         //객체값을 javascript에 매핑
         var companyObj = !{JSON.stringify(company).replace(/<\//g, '<\\/')};
-    script(src='/isu/js/usermanage/index.js')
+    script(src='/isu/js/usermanage/new.js')
 
 block content
     .content-page
