#KSY usermanage/edit.jade 추가

--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -2,7 +2,7 @@ extends ../layouts/default
 block head 
     script(type='text/javascript').
         var usermanageObj = !{JSON.stringify(usermanage).replace(/<\//g, '<\\/')};
-    script(src='/isu/js/usermanage/index.js')
+    script(src='/isu/js/usermanage/edit.js')
     
     // postcode
     script(src='/isu/js/postcode.js')
