--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -1,7 +1,6 @@
 extends ../layouts/default
 block head
     title  1-2 처리진행현황 목록
-    title 4-3 회사정보 입력
     // Plugins css
     link(href='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
     link(href='/plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
@@ -28,6 +27,11 @@ block head
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
+
+    // jQuery
+    script(src='/assets/js/jquery.min.js')
+    script(src='/assets/js/bootstrap.min.js')
+    
     script(src='/assets/js/detect.js')
     script(src='/assets/js/fastclick.js')
     script(src='/assets/js/jquery.slimscroll.js')
@@ -43,46 +47,12 @@ block head
     script(src='/plugins/select2/select2.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-
-    script(src='/assets/js/jquery.core.js')
-    script(src='/assets/js/jquery.app.js')
-    script(src='/vendor/jquery/jquery.min.js')
     
     script(type='text/javascript').
-        function moreView(){
-            alert(111);
+        //객체값을 javascript에 매핑
+        var incidentObj = !{JSON.stringify(incident).replace(/<\//g, '<\\/')};
 
-            //객체값을 javascript에 매핑
-            var incidentObj = !{JSON.stringify(incident).replace(/<\//g, '<\\/')};
-            //alert(JSON.stringify(incidentObj));
-            var cnt = JSON.stringify(incidentObj).length;
-            alert(cnt);
-            var sIdx =  4 ;
-            alert(sIdx);
-            alert(sIdx+3);
-            //alert(incidentObj[sIdx].title);
-            for(var j=sIdx ; j< sIdx+3 ; j++){
-                
-                $('#test').val(incidentObj[sIdx].title);
-               
-            }
-             alert(222);
-            //var sIdx = 
-
-             //alert(JSON.stringify(companyObj));dddd
-            //선택된 회사 인덱스 값
-            /*
-            var sIdx = $('#company_cd option').index($('#company_cd option:selected'));
-            sIdx = sIdx -1; //'선택하세요' 인덱스값 1을 빼줌
-            //선택값 매핑
-            $('#company_nm').val($('#company_cd option:selected').text());
-            $('input[name="usermanage[dom_post_cd1]"]').val(companyObj[sIdx].zip_cd);
-            $('input[name="usermanage[dom_addr]"]').val(companyObj[sIdx].addr);
-            $('input[name="usermanage[dom_addr2]"]').val(companyObj[sIdx].addr2);
-            $('input[name="usermanage[office_tel_no]"]').val(companyObj[sIdx].tel_no);
-        */
-        }
-       
+    script(src='/isu/js/incident/index.js')
 
 block content
     // ==============================================================
@@ -179,19 +149,14 @@ block content
             - }else{
                 
             - }                               
-            
                 .row
                     .col-lg-12
                         .form-group
                             .col-md-12 
-                                input.form-control(type='text', onclick='moreView();') 
+                                a.text-muted.text-more(id='moreView') 더보기
                 
-                .row
-                    .col-lg-12
-                        .form-group
-                            .col-md-12 
-                                input.form-control(id='test') 
 
+            
                                     
         // end content
 
