--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -27,11 +27,10 @@ block head
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
-
     // jQuery
     script(src='/assets/js/jquery.min.js')
     script(src='/assets/js/bootstrap.min.js')
-    
+
     script(src='/assets/js/detect.js')
     script(src='/assets/js/fastclick.js')
     script(src='/assets/js/jquery.slimscroll.js')
@@ -47,11 +46,14 @@ block head
     script(src='/plugins/select2/select2.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+
+    
+    script(src='/vendor/jquery/jquery.min.js') 
     
     script(type='text/javascript').
         //객체값을 javascript에 매핑
         var incidentObj = !{JSON.stringify(incident).replace(/<\//g, '<\\/')};
-
+        
     script(src='/isu/js/incident/index.js')
 
 block content
@@ -125,18 +127,18 @@ block content
                                                     b 이수시스템
                                                     b #{incident[i].request_company_cd}
                                                 span.p-w-xs
-                                            a.forum-item-title(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'")
+                                            a.forum-item-title(href='/incident/viewDetail')
                                                 i.md.md-desktop-windows
                                                 | #{incident[i].title}
                                                 
                                         .col-md-12
                                             .forum-content.truncate1.fh-60
-                                                a(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'")
+                                                a(href='/incident/viewDetail')
                                                     | #{incident[i].content}
-                                            a.text-muted.text-more(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'") 더보기
+                                            a.text-muted.text-more(href='/incident/viewDetail') 더보기
                                             .forum-level
                                                 p.text-muted.font-13
-                                                    b 서비스 만족도: 
+                                                    b 서비스 만족도:
                                                     span.m-l-15
                                                         i.md.md-star.text-warning
                                                         i.md.md-star.text-warning
