--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -47,7 +47,7 @@ block head
     script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
 
-    
+    script(src='/vendor/jquery/jquery.min.js')
     script(type='text/javascript').
         //객체값을 javascript에 매핑
         var incidentObj = !{JSON.stringify(incident).replace(/<\//g, '<\\/')};
@@ -80,6 +80,7 @@ block head
                     dataCnt = dataObj.length;
                 } 
             }
+
 
             for(var i=rowIdx ; i < dataCnt ; i++){
                 var addList = "";
@@ -131,11 +132,11 @@ block head
                 rowIdx++;
             }
             $("#more_view").remove();
-            $('#more_list').append("<div class='col-lg-12'><div class='card-box'><p><a class='text-muted text-more' id='moreView' onclick='javascript:moreView();' >더보기</a></p></div></div>");  
-            
-        }
-        function doView(){
-           document.form.submit();
+            if(i!= rowIdx){
+                $('#more_list').append("<div class='col-lg-12'><div class='card-box'><p><a class='text-muted text-more' id='moreView' onclick='javascript:moreView();' >더보기</a></p></div></div>");  
+            }else{
+                $('#more_list').append("<div class='col-lg-12'><div class='card-box'><p><a class='text-muted text-more'>더이상 데이터가 없습니다.</a></p></div></div>");  
+            }
         }
 
 block content
