# KSY 더보기 연결

--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -212,15 +212,15 @@ block content
                                                 span.text-primary
                                                     b #{incident[i].manager_nm}
                                                 span.p-w-xs
-                                            a.forum-item-title(href='/incident/viewDetail')
+                                            a.forum-item-title(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'")
                                                 i.md.md-desktop-windows
                                                 | #{incident[i].title}
                                                 
                                         .col-md-12
                                             .forum-content.truncate1.fh-60
-                                                a(href='/incident/viewDetail')
+                                                a(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'")
                                                     | #{incident[i].content}
-                                            a.text-muted.text-more(href='/incident/viewDetail') 더보기
+                                            a.text-muted.text-more(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'") 더보기
                                             .forum-level
                                                 p.text-muted.font-13
                                                     b 서비스 만족도:
